6.Terraform/kubernetes/aks-whale.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplewhale 
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: simplewhale
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplewhale  
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simplewhale
  template:
    metadata:
      labels:
        app: simplewhale
    spec:
      containers:
      - name: aks-helloworld-two
        image: maxonchik/simplewhale
        imagePullPolicy: Always
        ports:
        - containerPort: 80    
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          successThreshold: 2
          timeoutSeconds: 3
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
          initialDelaySeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 300m
            memory: 512Mi         
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d/
      volumes:
      - name: config
        configMap:
          name: configmap-nginx
